changed to cv website

--- a/index.html
+++ b/index.html
@@ -3,56 +3,104 @@
 
 <head>
   <meta charset="utf-8">
-  <title>☕TheCoffeeHouse☕</title>
+  <title>Personal Website</title>
+
+  <style media="screen">
+    body {
+
+      background-color: #A2B29F;
+    }
+
+    hr {
+
+      border-style: none;
+      border-top-style: dotted;
+      background-color: #A2B29F;
+      border-color: #BDD2B6;
+      border-width: 5px;
+      height: 0px;
+      width: 5%;
+    }
+
+    a {
+      color: #7D5A50;
+      text-decoration: none;
+      font-family: monospace;
+    }
+
+    a:visited {
+      color: none;
+    }
+
+    a:hover {
+      color: #A0937D;
+    }
+
+    a:active {
+      color: none;
+    }
+
+    img {
+      height: 150px;
+    }
+  </style>
+
 </head>
 
 <body>
-  <h1> <u><a href="images/pastries.jpg">☕TheCoffeeHouse☕</a></u> </h1>
-
-  <em> Welcome to our store! Make yourself at home as we indulge you in some coffee, conversation and more!
-    <br /><strong>Choose from our wide range of offerings and don't forget to check out our daily specials
-      <br /> Good Day Bros. </strong></em>
-  <hr size=1 noshade />
-
-  <h3><a href="specials.html">Today's specials</a></h3>
-
-  <hr size=1 noshade />
-
-  <h3><a href="regulars.html">Regular Joe</a></h3>
-
-  <hr size=1 noshade />
-
-  <h3><a href="orderin.html">Order In</a></h3>
 
   <table>
     <tr>
-      <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzFMVh7JF0ASKa2pkLYyCnddV5CbDXXs_CO-6ZntLxDRPik4cM5drx45FbTKMWAGct7eI&usqp=CAU" alt="img"></td>
+      <td><img src="images/brownpfp.jpg" alt="pfp"></td>
       <td>
-        <table>
+        <table cellspacing="20">
+          <tr>
+            <td>
+              <h2><em> Hey, I'm Aishwarya</em> </h2>
+            </td>
+          </tr>
+          <tr>
+            <td>Student at <em>Reva University</em>
+              <br />I'm having fun exploring <em>html, css and javascript</em>!
+              <br /><strong>Excited to make the most of this! </strong>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <hr size=1 noshade />
+
+  <table cellspacing="20">
+    <tr>
+      <td><img src="images/books.jpg" alt="img"></td>
+      <td>
+        <table cellspacing="20">
           <thead>
             <tr>
               <th>
-                Working Days
+                <em>Education</em>
               </th>
               <th>
-                Time
+                <em>Institution</em>
               </th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td> Sat & Sun </td>
-              <td> 9am - 1pm </td>
+              <td> High School </td>
+              <td> Cluny Convent High School </td>
             </tr>
             <tr>
-              <td> Week Days </td>
-              <td> 7am - 7pm </td>
+              <td> PUC </td>
+              <td> Vidya Mandir Ind PU </td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
-              <td> Delivery </td>
-              <td> 10am - 6pm </td>
+              <td> B-Tech(CSE) </td>
+              <td> Reva University </td>
             </tr>
           </tfoot>
         </table>
@@ -61,10 +109,43 @@
 
   </table>
 
-  <img src="https://media.istockphoto.com/photos/cup-glass-of-coffee-with-smoke-and-coffee-beans-on-old-wooden-picture-id1303583671?b=1&k=20&m=1303583671&s=170667a&w=0&h=Nq5aWss-PVbEm5jDIa0nTf35qsxQH8znqtX9MAU5__A=" alt="coffee" />
-  <img src="images/pastries.jpg" alt="cake" />
-  <br />
+  <hr size=1 noshade />
 
+  <h2><em>Skills</em></h2>
+  <table>
+    <tr>
+      <td>Java Programming</td>
+      <td>★★★</td>
+    </tr>
+    <tr>
+      <td>html</td>
+      <td>★★★</td>
+    </tr>
+    <tr>
+      <td>Singing</td>
+      <td>★★★</td>
+    </tr>
+    <tr>
+      <td>Acting</td>
+      <td>★★★</td>
+    </tr>
+    <tr>
+      <td>Stitching</td>
+      <td>★★</td>
+    </tr>
+  </table>
+
+  <table cellspacing=20>
+    <tr>
+      <td>
+        <h2><a href="contact.html">Contact Me</a></h2>
+      </td>
+      <td> </td>
+      <td>
+        <h2> <a href="dropinfo.html">Drop Info</a> </h2>
+      </td>
+    </tr>
+  </table>
 
 </body>
 
